# mlops_zoomcamp

./: .gitignore  .prefectignore  README.md  deployment.yaml  prefect.yaml  pyproject.toml
01-intro/: duration_prediction.ipynb
02-experiment-tracking/: duration_prediction.ipynb  duration_prediction_wandb.ipynb
03-orchestration/: README.md  add_two_numbers.py  create_email_server_block.py  create_s3_bucket_block.py  homework.py  orchestrate_duration_prediction.py
04-deployment/: Dockerfile  Pipfile  app.py  duration_predict_app.py  test_app.py
05-monitoring/: docker-compose.yml  evidently_metrics_calculation.py  homework.ipynb
05-monitoring/config/: grafana_datasources.yaml
06-best-practices/: Dockerfile  Pipfile  README.md  __init__.py  docker-compose.yml  predict_duration.py
06-best-practices/aws/: create_s3_bucket.sh
06-best-practices/tests/: ci_test.py  test_prepare_data.py
src/: __init__.py  config.py  create_model.py  load_data.py  preprocess.py  save_model.py  train_best_model.py
